# StarToMd

./: .env.example  .gitignore  pyproject.toml
docs/: notes-ell.md  project-star-to-md.md
src/: cli.py  pdf_to_md.py
src/star_to_md/: __init__.py  cli.py
src/star_to_md/config/: ell_config.py  logging.py  settings.py
src/star_to_md/core/: __init__.py  document.py  processor.py  registry.py
src/star_to_md/llm/: callbacks.py  client.py  prompts.py
src/star_to_md/models/: document.py
src/star_to_md/processors/hybrid/: pdf.py
src/star_to_md/services/: analyzer.py  chunker.py  enhancer.py
src/star_to_md/utils/: errors.py  monitoring.py  pandoc.py
